23. Mars
	Introduserte jQuery
		- Enkle animasjoner
	Litt rydding i CSS/Relatert
	Byttet ut <details>/<summary> med egen løsning basert på jQuery
	Ryddet opp litt i URL-lengde
	Endringer i datamodell
	
	