@@ -1,3 +1,8 @@
+24. Mars
+	Rydding i CSS
+	Valg av semester endelig på plass
+	Bedre logikk og rettledning i hjelpetekst for ny blogg
+
 23. Mars
 	Introduserte jQuery
 		- Enkle animasjoner
